--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,6 @@
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*_spec.rb'
 Style/Documentation:
   Enabled: false
 Style/FrozenStringLiteralComment:
